fix corsConfig method name for use withDefaults